# AITesterBlueprint_Projects

./: agent.md  findings.md  gemini.md  task_plan.md
Project1-LocalTestCaseGenerator/: .gitignore  B.L.A.S.T.md  README.md  app.py  findings.md  gemini.md  progress.md  task_plan.md
Project1-LocalTestCaseGenerator/architecture/: prompt_sop.md
Project1-LocalTestCaseGenerator/static/: style.css
Project2_SeleniumToPlaywright/: README.md  findings.md  gemini.md  progress.md  task_plan.md  test_api.py  test_conversion.py
Project3_SkillsCreator/: .gitignore  README.md  package.json  playwright.config.js
Project4_LearnAIGroq/: README.md  index.html  package-lock.json  package.json
Project4_TestPlan_AIAgents/: .env.example  .gitignore  README.md  findings.md  gemini.md  progress.md  start.bat  task_plan.md
Project4_TestPlan_AIAgents/backend/: pyproject.toml  requirements.txt
Project4_TestPlan_AIAgents/backend/app/: main.py
Project4_TestPlan_AIAgents/backend/app/api/endpoints/: config.py  testplan.py
Project4_TestPlan_AIAgents/backend/app/services/: jira_client.py  llm_engine.py
Project4_TestPlan_AIAgents/backend/scripts/: test_jira.py  test_llm.py
Project5_n8nLearning/: .gitignore  README.md  conversation.md  credentials.md  package-lock.json  package.json
Project6_TestStrategy_AIAgents/: .env.example  .gitignore  README.md  findings.md  gemini.md  progress.md  prompt.md  task_plan.md
Project7_BugReporter/: LINKEDIN_POST.md  LINKEDIN_POST_SHORT.md  LINKEDIN_POST_SKILL.md  findings.md  gemini.md  progress.md  prompt.md  task_plan.md
(+64 files in other folders)
